# Carlos-s-Batmobile

./: .gitignore  Controllsoftware.py  README.md  RPI_control.py  RPI_controll_server.py  gyro.py  hadware_setup.sh  hardware_setup.sh  hosts  install-batman-gateway.sh  install-batman.sh  joisick.ino  network-test.sh  scan_hosts.sh  videostreaming.md  vmaf.md  websocket.py
.idea2/: deployment.xml  misc.xml  modules.xml
Controllsoftware_Website/: index.html  position.html  video.html  websocket.html
DATA/: LaserData10.csv  LaserData12.csv  LaserData8.csv
batman/: dhcp-logger.sh  install-batman-bridge.sh  install-batman-gateway.sh  install-batman-gateway_G1.sh  install-batman-gateway_G2.sh  install-batman-gateway_G3.sh  install-batman.sh  install-batman_G3.sh  migrate.sh  network-test.sh  poster.md  poster.org  start-batman-adv.sh  trace.sh  watchBat.sh
controllsoftware/: Controllsoftware.py  Mouse_Movement  Mouse_Movement.py  RPI_control.py  delay_till_network  dict.py  gyro_lib.py  laser_trial.py  maus_trial.py  motorcontroll.py  msg_dict.py  positioner.py
joisick/: joisick.ino
mapping/: adjMat.csv  bt_names.py  drawer.py  (+21 more)
rtsp-server/: 144p15fps200000bit.conf  144p30fps200000bit.conf  240p15fps200000bit.conf  240p15fps200000bit_flip.conf  240p30fps200000bit.conf  480p15fps1000000bit.conf  480p15fps200000bit.conf  480p30fps1000000bit.conf  480p30fps2000000bit.conf  480p30fps200000bit.conf  480p30fps500000bit.conf  600p30fps4000000bit.conf  CMakeLists.txt  jpeg240p15fps_bitrate.conf  main.cpp  pipeline.conf
webrtc-server/: CMakeLists.txt  main.c  main.cpp
(+89 files in other folders)
